--- a/AutoCAD_Windows/AutoCAD_Windows/AutoCAD_Windows.csproj
+++ b/AutoCAD_Windows/AutoCAD_Windows/AutoCAD_Windows.csproj
@@ -58,6 +58,9 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Textstyle.xaml.cs">
+      <DependentUpon>Textstyle.xaml</DependentUpon>
+    </Compile>
     <Page Include="Layer.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -89,6 +92,10 @@
     <Page Include="StyleDictionary.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Textstyle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
