--- a/AutoCAD_Windows/Tester/Tester.csproj
+++ b/AutoCAD_Windows/Tester/Tester.csproj
@@ -38,6 +38,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\netDxf\netDxf\bin\Debug\netDxf.dll</HintPath>
     </Reference>
+    <Reference Include="Ookii.Dialogs.Wpf">
+      <HintPath>..\..\..\ookii-dialogs-wpf\src\Ookii.Dialogs.Wpf\bin\Debug\Ookii.Dialogs.Wpf.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Windows.Forms" />
