--- a/AutoCAD_Windows/AutoCAD_Windows/WindowDictionary.csproj
+++ b/AutoCAD_Windows/AutoCAD_Windows/WindowDictionary.csproj
@@ -69,6 +69,9 @@
     <Compile Include="Converters\DoubleConverter.cs" />
     <Compile Include="Converters\IntegerConverter.cs" />
     <Compile Include="Extensions\DxfLayerExtended.cs" />
+    <Compile Include="Property\Creator\CDependencyRegex.xaml.cs">
+      <DependentUpon>CDependencyRegex.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Property\Creator\CGroup.xaml.cs">
       <DependentUpon>CGroup.xaml</DependentUpon>
     </Compile>
@@ -154,6 +157,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="LoadLinetype.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Property\Creator\CDependencyRegex.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
